// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandCollapseAllButton renders per snapshot with allCardsCollapsed false 1`] = `
<DocumentFragment>
  <mock-customizedactionbutton
    aria-expanded="true"
    classname="expandCollapseAllButton"
    iconprops="[object Object]"
  >
    Collapse all
  </mock-customizedactionbutton>
</DocumentFragment>
`;

exports[`ExpandCollapseAllButton renders per snapshot with allCardsCollapsed true 1`] = `
<DocumentFragment>
  <mock-customizedactionbutton
    aria-expanded="false"
    aria-label="Expand all rules to show failed instances."
    classname="expandCollapseAllButton"
    iconprops="[object Object]"
  >
    Expand all
  </mock-customizedactionbutton>
</DocumentFragment>
`;
